--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,9 +1,66 @@
 .list {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   font-size: 1.5em;
   color: white;
 }
 .item {
   text-transform: uppercase;
+}
+.logo {
+  width: 2em;
+  cursor: pointer;
+}
+header {
+  width: 100vw;
+  border-bottom: 0.1em solid rgba(255, 255, 255, 0.2);
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 90vw;
+  margin: 0 auto;
+  padding: 0.5em 0;
+  background-color: rgb(15, 15, 15, 0.5);
+}
+.item {
+  margin: 0 1em;
+  cursor: pointer;
+}
+.hamburger {
+  width: 3em;
+  height: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  cursor: pointer;
+}
+.line {
+  position: relative;
+  width: 50%;
+  height: 0.1em;
+  border-radius: 0.15em;
+  background-color: white;
+}
+.line::after,
+.line::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  width: 60%;
+  height: 100%;
+  background-color: inherit;
+}
+.line::after {
+  top: 0.5em;
+}
+
+.line::before {
+  top: -0.5em;
 }
