--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -8,3 +8,17 @@
   font-size: 3em;
   text-transform: uppercase;
 }
+.paralax {
+  position: relative;
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  /* transform: translate(calc((50% + 10%)), 100px); */
+  /* transform: translateX(calc(50%)); */
+  transition: all 0.05s ease-in-out;
+}
+.bg {
+  position: absolute;
+  /* width: 2800px; */
+  top: calc(50%);
+}
