--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 100%;
   height: 100%;
   color: white;
@@ -21,7 +21,9 @@ html {
   height: 100%;
 }
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -32,4 +34,19 @@ img,
 video {
   max-width: 100%;
   height: auto;
+}
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+::-webkit-scrollbar-track {
+  background-color: rgba(12, 12, 12, 0.8);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(78, 77, 77, 0.8);
+  border-radius: 0.2em;
+  transition: all 2s ease-in-out;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(118, 117, 117, 0.8);
+  transition: all 2s ease-in-out;
 }
