--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -10,15 +10,42 @@
 }
 .paralax {
   position: relative;
-  /* top: 50%; */
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  /* transform: translate(calc((50% + 10%)), 100px); */
-  /* transform: translateX(calc(50%)); */
   transition: all 0.05s ease-in-out;
 }
 .bg {
   position: absolute;
-  /* width: 2800px; */
   top: calc(50%);
+}
+.meteor {
+  width: 20em;
+}
+.spaceship {
+  width: 10em;
+  transform: rotate(180deg);
+}
+.parallaxContainer {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 20em;
+}
+
+.parallaxContent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 100%;
+  background-image: url("../../images/meteor3.png");
+  background-size: contain;
+  animation: parallaxAnimation 10s infinite linear;
+}
+
+@keyframes parallaxAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }
